# assignment-checker

./: Cargo.toml  readme.md
.github/workflows/: lint.yml  test.yml
src/: main.rs  stats.rs
testdata/same_assignments/student1/: entry.txt
testdata/same_assignments/student2/: entry.txt
testdata/similar_assignments/student1/: entry.txt
testdata/similar_assignments/student2/: entry.txt
testdata/similar_assignments/student3/: entry.txt
