[package]
name = "assignments_checker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
lzjd = { git = "https://github.com/malwaredb/lzjd-rs.git", branch = "remove_fasthash" }
ssdeep = "0.2"
termcolor = "1.1"
walkdir = "2.3"

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true