[package]
name = "assignments_checker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
malwaredb-lzjd = "0.1.2"
ssdeep = "0.5"
termcolor = "1.3"
walkdir = "2.4"

[profile.release]
incremental = false
codegen-units = 1
lto = true
strip = true